--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ unbind-key p
 unbind-key ] 
 bind-key p paste-buffer 
 
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
 #start counting at 1
 set -g base-index 1
 #aggressive resize
